[tool.poetry]
name = "image-generator"
version = "0.1.0"
description = ""
authors = ["Artur Akmalov <artur@akmalov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
image = "^1.5.33"
argparse = "^1.4.0"
Flask = "^2.1.2"
Bootstrap-Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
